--- a/index.html
+++ b/index.html
@@ -8,25 +8,27 @@
 <body> 
     <header> 
 <nav> 
-<a href="">Webstudio</a> 
-</nav> 
+<a href="./index.html">WebStudio</a> 
+ 
 <ul> 
     <li> 
-        <p>Studio</p> 
+        <a href="">Studio</a> 
     </li> 
     <li> 
-        <p>Portfolio</p> 
+        <a href="">Portfolio</a> 
     </li> 
     <li> 
-        <p>Contacts</p> 
+        <a href="">Contacts</a> 
     </li> 
 </ul> 
+</nav>
  <address> 
         <ul> 
-          <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li> 
-          <li> 
+             <li> 
             <a href="mailto:info@devstudio.com">info@devstudio.com</a> 
-          </li> 
+          </li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </li>       
         </ul> 
       </address> 
       <h1>Effective Solutions for Your Business</h1> 
