--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
      
     <main> 
 <section><h1>Effective Solutions for Your Business</h1> 
-      <button type="button">OrderService</button> </section>
+      <button type="button">Order Service</button> </section>
       <section>
-<!--hidden title h2-->
+<h2>Title</h2>
 <ul> 
     <li> 
         <h3>Strategy</h3> 
